set(TORCH_CMAKE_MODULE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Build/Modules")
list(APPEND CMAKE_MOUDLE_PATH "${TORCH_CMAKE_MODULE_DIR}")

project(Torch)

cmake_minimum_required(VERSION 3.13)

set(TORCH_MAJOR_VERSION 1)
set(TORCH_MINOR_VERSION 0)
set(TORCH_PATH_VERSION 0)

set(TORCH_VERSION ${TORCH_MAJOR_VERSION}.${TORCH_MINOR_VERSION}.${TORCH_PATH_VERSION})
message(${TORCH_VERSION})

set(TORCH_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
message(${TORCH_ROOT_DIR})

include(${TORCH_CMAKE_MODULE_DIR}/Common.cmake)
include(${TORCH_CMAKE_MODULE_DIR}/Platform.cmake)
include(${TORCH_CMAKE_MODULE_DIR}/Compiler.cmake)

set(Torch_BIN_DIR "${TORCH_ROOT_DIR}/Torch_bin/${TORCH_PLATFORM_NAME}")

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(${TORCH_ROOT_DIR}/Source/External/Build/CMake ${CMAKE_CURRENT_BINARY_DIR}/External EXCLUDE_FROM_ALL)
add_subdirectory(${TORCH_ROOT_DIR}/Source/Torch/Build/Cmake ${CMAKE_CURRENT_BINARY_DIR}/Torch)